--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=VT323&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=VT323&display=swap"
     rel="stylesheet">
   <!-- My Styles -->
   <link rel="stylesheet" href="./css/style.css">
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link" href="/about.html">About</a>
           <a class="nav-link" href="/projects">Projects</a>
           <a class="nav-link" href="/skills">Skills</a>
           <a class="nav-link" href="/contact">Contact</a>
@@ -51,7 +51,7 @@
         </p>
 
         <!-- Account Links -->
-        <div class="account-links mt-5">
+        <div class="account-links my-5">
           <p class="vt323">GitHub: <a href="https://github.com/santi224m">@santi224m</a></p>
           <p class="vt323">Kaggle: <a href="https://www.kaggle.com/santiagomondragon">@santiagomondragon</a></p>
           <p class="vt323">Email: <a href="mailto:santiagomondragon.com">santiago.mondragon224@gmail.com</a></p>
