--- a/src/about.html
+++ b/src/about.html
@@ -31,10 +31,10 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" aria-current="page" href="/">Home</a>
-          <a class="nav-link active" href="/about">About</a>
-          <a class="nav-link" href="/projects">Projects</a>
-          <a class="nav-link" href="/skills">Skills</a>
-          <a class="nav-link" href="/contact">Contact</a>
+          <a class="nav-link active" href="/about.html">About</a>
+          <a class="nav-link" href="/projects.html">Projects</a>
+          <a class="nav-link" href="/skills.html">Skills</a>
+          <a class="nav-link" href="/contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -94,7 +94,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/cursor_blink.js"></script>
-  <script src="./js/hand_wave.js"></script>
 </body>
 
 </html>
