--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
           <a class="nav-link" href="/about.html">About</a>
-          <a class="nav-link" href="/projects">Projects</a>
-          <a class="nav-link" href="/skills">Skills</a>
-          <a class="nav-link" href="/contact">Contact</a>
+          <a class="nav-link" href="/projects.html">Projects</a>
+          <a class="nav-link" href="/skills.html">Skills</a>
+          <a class="nav-link" href="/contact.html">Contact</a>
         </div>
       </div>
     </div>
