--- a/src/about.html
+++ b/src/about.html
@@ -46,7 +46,7 @@
     <h1 class="text-center mb-4 vt323">About Me</h1>
 
     <h2 class="vt323">How I got into computers</h2>
-    <p>
+    <p class="text-small">
       I started programming after taking a robotics class in high school, where we had to program a robot to drive
       around a course, among other projects.
       I enjoyed the feeling of getting something to work after messing around with the code and started to learn more
@@ -59,7 +59,7 @@
     </p>
 
     <h2 class="mt-4 vt323">Education</h2>
-    <p>
+    <p class="text-small">
       I am currently studying Computer Science at California State University, Fullerton.
       I started my studies as a Business Administration major, but I had already been into programming since high school
       so I decided to change my major to Computer Science my sophomore year. I love to learn computer related topics
@@ -68,7 +68,7 @@
     </p>
 
     <h2 class="mt-4 vt323">Skills</h2>
-    <p>
+    <p class="text-small">
       I have experience with frontend and backend development, as well as some experience with data science and machine
       learning.
       I have worked with Python, JavaScript, Flask, NextJS, HTML, CSS, and PostgreSQL. I am also comfortable with Linux
@@ -76,7 +76,7 @@
     </p>
 
     <h2 class="mt-4 vt323">Interests</h2>
-    <p>
+    <p class="text-small">
       I am interested in all aspects of software engineering, data science, and machine learning. I love to learn new
       things and am always
       looking for new projects to work on. Outside of computers, I enjoy watching and collecting movies.
@@ -85,7 +85,7 @@
     </p>
 
     <h2 class="mt-4 vt323">Resume</h2>
-    <p>
+    <p class="text-small">
       You can view and download my resume <a class="vt323" href="./pdf/Santiago_Mondragon_Resume.pdf">here</a>.
     </p>
   </div>
