--- a/src/contact.html
+++ b/src/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Santiago Mondragon | Portfolio</title>
+  <title>Contact | Santiago Mondragon</title>
   <!-- Bootstrap and emoji css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=VT323&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=VT323&display=swap"
     rel="stylesheet">
   <!-- My Styles -->
   <link rel="stylesheet" href="./css/style.css">
@@ -30,11 +30,11 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link" aria-current="page" href="/">Home</a>
           <a class="nav-link" href="/about.html">About</a>
           <a class="nav-link" href="/projects.html">Projects</a>
           <a class="nav-link" href="/skills.html">Skills</a>
-          <a class="nav-link" href="/contact.html">Contact</a>
+          <a class="nav-link active" href="/contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -42,35 +42,44 @@
   <!-- End Navbar -->
 
   <!-- Main Content -->
-  <div class="container py-5">
-    <div class="row">
-      <div class="col">
-        <h1>Hi all, I'm Santiago <i class="em em-wave" aria-role="presentation" aria-label="WAVING HAND SIGN"></i></h1>
-        <p class="bio mt-3">
-          Software enthusiast who loves learning new technologies and creating applications
-          that solve real-world problems.
-        </p>
+  <div class="container-xsm py-5">
+    <h1 class="text-center mb-4 vt323">Contact Me</h1>
+    <p class="text-center">You can send me a message using the form below or email me.</p>
 
-        <!-- Account Links -->
+    <div class="row mt-5">
+      <div class="col-12 col-md-6"></div>
         <div class="account-links my-5">
           <p class="vt323">GitHub: <a href="https://github.com/santi224m">@santi224m</a></p>
           <p class="vt323">Kaggle: <a href="https://www.kaggle.com/santiagomondragon">@santiagomondragon</a></p>
           <p class="vt323">Email: <a href="mailto:santiagomondragon.com">santiago.mondragon224@gmail.com</a></p>
         </div>
       </div>
-      <!-- Avatar -->
-      <div class="col">
-        <img style="height:auto;" alt="" src="https://avatars.githubusercontent.com/u/36117697?v=4" width="260"
-          height="260" class="avatar">
+      <div class="col-12 col-md-6"></div>
+        <form>
+          <div class="mb-3">
+            <label for="sender-contact-info" class="form-label">How can I get back to you?</label>
+            <input type="text" class="form-control" id="sender-contact-info" placeholder="Email or Phone Number">
+          </div>
+          <div class="mb-3">
+            <label for="subject" class="form-label">Subject</label>
+            <input type="text" class="form-control" id="subject">
+          </div>
+          <div class="mb-3">
+            <label for="message" class="form-label">Message</label>
+            <textarea class="form-control" id="message" rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary w-100 mt-2">Send message</button>
+        </form>
       </div>
     </div>
+  </div>
+
   </div>
   <!-- End Main Content -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/cursor_blink.js"></script>
-  <script src="./js/hand_wave.js"></script>
 </body>
 
 </html>
