--- a/src/skills.html
+++ b/src/skills.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects | Santiago Mondragon</title>
+  <title>Skills | Santiago Mondragon</title>
   <!-- Bootstrap and emoji css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
@@ -32,8 +32,8 @@
         <div class="navbar-nav">
           <a class="nav-link" aria-current="page" href="/">Home</a>
           <a class="nav-link" href="/about.html">About</a>
-          <a class="nav-link active" href="/projects.html">Projects</a>
-          <a class="nav-link" href="/skills.html">Skills</a>
+          <a class="nav-link" href="/projects.html">Projects</a>
+          <a class="nav-link active" href="/skills.html">Skills</a>
           <a class="nav-link" href="/contact.html">Contact</a>
         </div>
       </div>
@@ -43,53 +43,37 @@
 
   <!-- Main Content -->
   <div class="container-xsm py-5">
-    <h1 class="text-center mb-4 vt323">Projects</h1>
+    <h1 class="text-center mb-4 vt323">Skills</h1>
 
-    <!-- Serial Number System -->
-    <h2 class="vt323">Serial Number System</h2>
-    <div class="img-container">
-      <img src="./img/serial-number-system.webp" alt="Serial Number System Screenshot" class="project">
-    </div>
-
-    <h3 class="vt323 mt-3">Description</h3>
-    <p class="text-small">
-      This is a web app that I developed for an IT distributor.
-      It is used by the warehouse to scan the serial numbers of the products they ship out to keep track of shipped
-      items.
-      It is also used by the RMA department to check warranty and the sales department to send serial numbers to their
-      customers.
-    </p>
-
-
-    <h3 class="vt323 mt-3">Technologies</h3>
+    <h2 class="vt323">Technical</h2>
     <div class="container px-0">
       <div class="row text-small tech-list">
         <div class="col-12 col-md-6 mb-2">&gt; Python</div>
         <div class="col-12 col-md-6 mb-2">&gt; Flask</div>
         <div class="col-12 col-md-6 mb-2">&gt; PostgreSQL</div>
+        <div class="col-12 col-md-6 mb-2">&gt; MySQL</div>
         <div class="col-12 col-md-6 mb-2">&gt; HTML</div>
         <div class="col-12 col-md-6 mb-2">&gt; CSS</div>
-        <div class="col-12 col-md-6 mb-2">&gt; JavaScript</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Linux (Debian)</div>
+        <div class="col-12 col-md-6 mb-2">&gt; JavaScript/TypeScript</div>
+        <div class="col-12 col-md-6 mb-2">&gt; React/NextJS</div>
+        <div class="col-12 col-md-6 mb-2">&gt; scikit-learn</div>
+        <div class="col-12 col-md-6 mb-2">&gt; pandas</div>
+        <div class="col-12 col-md-6 mb-2">&gt; matplotlib/seaborn</div>
+        <div class="col-12 col-md-6 mb-2">&gt; Git &amp; GitHub</div>
+        <div class="col-12 col-md-6 mb-2">&gt; Linux (Debian/Arch)</div>
+      </div>
+
+      <h2 class="vt323 mt-5">Non-Technical</h2>
+      <div class="row text-small tech-list">
+        <div class="col-12 col-md-6 mb-2">&gt; Communication</div>
+        <div class="col-12 col-md-6 mb-2">&gt; Problem Solving</div>
+        <div class="col-12 col-md-6 mb-2">&gt; Teamwork</div>
+        <div class="col-12 col-md-6 mb-2">&gt; Adaptability</div>
+        <div class="col-12 col-md-6 mb-2">&gt; Time Management</div>
+        <div class="col-12 col-md-6 mb-2">&gt; Critical Thinking</div>
+        <div class="col-12 col-md-6 mb-2">&gt; Creativity</div>
       </div>
     </div>
-
-    <h3 class="vt323 mt-3">Challenges</h3>
-    <p class="text-small">
-      The biggest challenge was to make the app work with the many different outputs of the barcodes.
-      Each brand outputs serial numbers in a different format, so I had to make several parsers.
-      Also, there are times when the barcode scanner does not scan the barcode correctly, so I had to make a detector for
-      incorrectly scanned serials. I was able to do this by using a modified fuzzy string matching algorithm.
-    </p>
-
-    <h3 class="vt323 mt-3">Outcome</h3>
-    <p class="text-small">
-      This app is currently being used by the IT distributor to keep track of the items they ship to their customers.
-    </p>
-  </div>
-
-  <!-- End Serial Number System -->
-
 
   </div>
   <!-- End Main Content -->
