--- a/src/projects.html
+++ b/src/projects.html
@@ -64,13 +64,13 @@
     <h3 class="vt323 mt-3">Technologies</h3>
     <div class="container px-0">
       <div class="row text-small tech-list">
-        <div class="col-12 col-md-6 mb-2">&gt; Python</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Flask</div>
-        <div class="col-12 col-md-6 mb-2">&gt; PostgreSQL</div>
-        <div class="col-12 col-md-6 mb-2">&gt; HTML</div>
-        <div class="col-12 col-md-6 mb-2">&gt; CSS</div>
-        <div class="col-12 col-md-6 mb-2">&gt; JavaScript</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Linux (Debian)</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-brands fa-python fa-lg"></i> Python</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-laptop-code fa-lg"></i> Flask</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-database"></i> PostgreSQL</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-brands fa-html5 fa-lg"></i> HTML</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-brands fa-css3-alt fa-lg"></i> CSS</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-brands fa-js fa-lg"></i> JavaScript</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-terminal fa-lg"></i> Linux (Debian)</div>
       </div>
     </div>
 
