--- a/src/skills.html
+++ b/src/skills.html
@@ -48,30 +48,30 @@
     <h2 class="vt323">Technical</h2>
     <div class="container px-0">
       <div class="row text-small tech-list">
-        <div class="col-12 col-md-6 mb-2">&gt; Python</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Flask</div>
-        <div class="col-12 col-md-6 mb-2">&gt; PostgreSQL</div>
-        <div class="col-12 col-md-6 mb-2">&gt; MySQL</div>
-        <div class="col-12 col-md-6 mb-2">&gt; HTML</div>
-        <div class="col-12 col-md-6 mb-2">&gt; CSS</div>
-        <div class="col-12 col-md-6 mb-2">&gt; JavaScript/TypeScript</div>
-        <div class="col-12 col-md-6 mb-2">&gt; React/NextJS</div>
-        <div class="col-12 col-md-6 mb-2">&gt; scikit-learn</div>
-        <div class="col-12 col-md-6 mb-2">&gt; pandas</div>
-        <div class="col-12 col-md-6 mb-2">&gt; matplotlib/seaborn</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Git &amp; GitHub</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Linux (Debian/Arch)</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-brands fa-python fa-lg"></i> Python</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-laptop-code fa-lg"></i> Flask</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-database"></i> PostgreSQL</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-database"></i> MySQL</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-brands fa-html5 fa-lg"></i> HTML</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-brands fa-css3-alt fa-lg"></i> CSS</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-brands fa-js fa-lg"></i> JavaScript/TypeScript</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-brands fa-react"></i> React/NextJS</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-chart-diagram fa-lg"></i> scikit-learn</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-table-cells fa-lg"></i> pandas</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-chart-line fa-lg"></i> matplotlib/seaborn</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-code-merge fa-lg"></i> Git &amp; GitHub</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-terminal fa-lg"></i> Linux (Debian/Arch)</div>
       </div>
 
       <h2 class="vt323 mt-5">Non-Technical</h2>
       <div class="row text-small tech-list">
-        <div class="col-12 col-md-6 mb-2">&gt; Communication</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Problem Solving</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Teamwork</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Adaptability</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Time Management</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Critical Thinking</div>
-        <div class="col-12 col-md-6 mb-2">&gt; Creativity</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-handshake fa-lg"></i> Communication</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-screwdriver-wrench fa-lg"></i> Problem Solving</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-people-group fa-lg"></i> Teamwork</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-wand-magic-sparkles fa-lg"></i> Adaptability</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-calendar-week fa-lg"></i> Time Management</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-lightbulb fa-lg"></i> Critical Thinking</div>
+        <div class="col-12 col-md-6 mb-2"><i class="fa-solid fa-palette fa-lg"></i> Creativity</div>
       </div>
     </div>
 
