--- a/src/contact.html
+++ b/src/contact.html
@@ -48,30 +48,31 @@
 
     <div class="row mt-5">
       <div class="col-12 col-md-6"></div>
-        <div class="account-links my-5">
-          <p class="vt323">GitHub: <a href="https://github.com/santi224m">@santi224m</a></p>
-          <p class="vt323">Kaggle: <a href="https://www.kaggle.com/santiagomondragon">@santiagomondragon</a></p>
-          <p class="vt323">Email: <a href="mailto:santiagomondragon.com">santiago.mondragon224@gmail.com</a></p>
-        </div>
-      </div>
-      <div class="col-12 col-md-6"></div>
-        <form>
-          <div class="mb-3">
-            <label for="sender-contact-info" class="form-label">How can I get back to you?</label>
-            <input type="text" class="form-control" id="sender-contact-info" placeholder="Email or Phone Number">
-          </div>
-          <div class="mb-3">
-            <label for="subject" class="form-label">Subject</label>
-            <input type="text" class="form-control" id="subject">
-          </div>
-          <div class="mb-3">
-            <label for="message" class="form-label">Message</label>
-            <textarea class="form-control" id="message" rows="3"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary w-100 mt-2">Send message</button>
-        </form>
+      <div class="account-links my-5">
+        <p class="vt323">GitHub: <a href="https://github.com/santi224m">@santi224m</a></p>
+        <p class="vt323">Kaggle: <a href="https://www.kaggle.com/santiagomondragon">@santiagomondragon</a></p>
+        <p class="vt323">Email: <a href="mailto:santiagomondragon.com">santiago.mondragon224@gmail.com</a></p>
       </div>
     </div>
+    <div class="col-12 col-md-6"></div>
+    <form name="contact" method="POST" data-netlify="true">
+      <input type="hidden" name="subject" value="Message from personal portfolio" />
+      <div class="mb-3">
+        <label for="sender-contact-info" class="form-label">How can I get back to you?</label>
+        <input type="text" class="form-control" id="sender-contact-info" placeholder="Email or Phone Number">
+      </div>
+      <div class="mb-3">
+        <label for="subject" class="form-label">Subject</label>
+        <input type="text" class="form-control" id="subject">
+      </div>
+      <div class="mb-3">
+        <label for="message" class="form-label">Message</label>
+        <textarea class="form-control" id="message" rows="3"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary w-100 mt-2">Send message</button>
+    </form>
+  </div>
+  </div>
   </div>
 
   </div>
